<resources>

    <string name="app_name">SuperHelper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">first name</string>
    <string name="second_name">last name</string>
    <string name="mobile">mobile number</string>
    <string name="dialog_message">Are you sure to accept this offer</string>
    <string name="dialog_title">Offer Accepting</string>
    <string name="signup_as_helper">Sign up as helper</string>
    <string name="call_this_number">please call this number</string>
    <string name="done_btn">Done</string>
    <string name="future_helping">We build The future of Help Services</string>
    <string name="sign_in_if_you_need_help">SignUp To Find Help</string>
    <string name="log_in">Login</string>
    <string name="login_to_your_account">Log in to your account</string>
    <string name="happy_to_be_here">the community happy to have you here</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="main">Main</string>
    <string name="account">Account</string>
    <string name="request_details">Request Details</string>
    <string name="helping_type">Help for What</string>
    <string name="for_how">For Who</string>
    <string name="request_title">Title</string>
    <string name="offers">Offers</string>
    <string name="add_offer">add your offer</string>
    <string name="request_details_here">Write Offer Details</string>
    <string name="offer_help">Offer Help</string>
    <string name="hour_price">Hour Price</string>
    <string name="hour_price_text">Hour Price</string>
    <string name="add_offer_btn">Offer Help</string>
    <string name="cancel">Cancel</string>
    <string name="account_info">Account Info</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit">edit</string>
    <string name="update">update</string>
    <string name="confirm_location">confirm location</string>
    <string name="log_out">logout</string>
    <string name="for_who_helo">Helping for Who</string>
    <string name="for_what_helo">Helping in what</string>
    <string name="title">title</string>
    <string name="releted_things">relevant tags</string>
    <string name="location">Get Location</string>
    <string name="sent_req">Send Request</string>
    <string name="know_more">now more about you</string>
    <string name="next">Next</string>
    <string name="conserns">type your intersts here</string>
    <string name="disable_tpye">Disable Type</string>
    <string name="job">Job</string>
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="what_is_your_name">What is your Name</string>
    <string name="please_put_info">complete this information</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="id_photo">Take Pic for your ID Card</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirme_email">confirm email</string>
    <string name="imprtant_email">your email help you log in to your account</string>
    <string name="enter_password">Choose Password</string>
    <string name="password_contain">use more than 6 characters for security</string>
    <string name="confirm_password">  confirm password</string>
    <string name="houre_price">hour price  :</string>
    <string name="order_status">request status  :</string>
    <string name="time">time :</string>
    <string name="date">date :</string>
    <string name="accept">accept this offer</string>
    <string name="enter_data_correctly">put the data correctly</string>
    <string name="please_upload_image">shoul upload your id card</string>
    <string name="must_enter">should enter data</string>
    <string name="must_equle">the data must equel</string>
    <string name="enter_correct_email">enter correct email</string>
    <string name="valid_email">enter valid email</string>
    <string name="valid_password">enter valid password</string>
    <string name="accept_status">\"accept \"</string>
    <string name="offer_accepted">your offer accepted</string>
    <string name="offer_status">offer status</string>
    <string name="already_add_offer">   your already added offer</string>
    <string name="do_you_accept_this_offer">do you want to accept this offer</string>
    <string name="no">no</string>
    <string name="offer_accept">offer accept</string>
    <string name="couple">couple</string>
    <string name="one_women">one woman</string>
    <string name="one_man">one man</string>
    <string name="old_man_helping">  old man hleping</string>
    <string name="walking">walking</string>
    <string name="reading">reading</string>
    <string name="reading_title">reading</string>
    <string name="sport">sport</string>
    <string name="watching_movies"> watching movies</string>
    <string name="programming">programming</string>
    <string name="vision_Impairment">vision Impairment</string>
    <string name="deaf">deaf</string>
    <string name="physical_disability">physical disability </string>
    <string name="closed">closed</string>
    <string name="accepted">accepted</string>
    <string name="arabic">Arabic</string>
    <string name="eng">English</string>
    <string name="super_helper">Super Helper</string>

</resources>