<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/offer_details_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:hint="@string/request_details_here"
        android:background="@drawable/edit_text_round_border"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/offer_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:weightSum="4"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_details_et">



        <EditText
            android:id="@+id/hour_price_et"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:layout_marginStart="20dp"
            android:background="@drawable/edit_text_round_border"
            android:ems="10"
            android:hint="@string/hour_price_text"
            android:inputType="number"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="244dp" />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/hour_price"
       />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/roundedbutton"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="327dp" />

        <Button
            android:id="@+id/offer_help_btn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/add_offer_btn"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedbutton"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="331dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>