<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_corner_redius"

    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"

        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gender_radio_group_sign_up_last_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/male_radio_btn_sign_up_last_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="232dp"
            tools:text="Male" />

        <RadioButton
            android:id="@+id/female_radio_btn_sign_up_last_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/female"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="232dp"
            tools:text="Female" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_radio_group_sign_up_last_page">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/buttonSubmit"
            app:layout_constraintTop_toBottomOf="@+id/second_edit_text" />
        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_weight="1"
            android:text="@string/update"
            android:layout_marginStart="30dp"

            app:layout_constraintTop_toBottomOf="@+id/second_edit_text"
            tools:layout_editor_absoluteX="228dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>